# cfg-fake-main

./: README.md  deny.toml
crates/lib/fake-main/: Cargo.toml
crates/lib/fake-main/src/: lib.rs
