[package]
name = "fake-main"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Just like a create-root level `#![cfg(...)]` macro, but injects a dummy `fn main` when the predicate is `false`"
repository = "https://github.com/MOZGIII/cfg-fake-main.git"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
